--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -17,7 +17,20 @@ body {
     font-style: normal;
     font-weight: 700;
     padding: 15px 35px;
+}
 
+.section-title {
+    color: #181818;
+    text-align: center;
+    font-size: 35px;
+    font-weight: 700;
+}
+
+.section-discription {
+    color:#757575;
+    text-align: center;
+    font-family: Open Sans;
+    font-size: 18px;
 
 }
 
@@ -26,7 +39,7 @@ nav {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    margin:0px 250px;
+    margin: 0px 250px;
 }
 
 .nav-title {
@@ -38,7 +51,7 @@ nav {
 nav>ul {
     display: flex;
     align-items: center;
-    
+
 }
 
 nav li {
@@ -52,14 +65,52 @@ nav a {
 }
 
 /* header related style */
-.header{
+.header {
     background-color: #FFF8F3;
+    background-image: url(../images/header_bg.png);
+    background-repeat: no-repeat;
+    background-position: bottom right;
 }
-.banner{
-    padding: 30px 30px 30px 150px;
+
+.banner {
+    padding: 30px 30px 0px 150px;
     display: flex;
     align-items: center;
+    justify-content: space-between;
 }
-.banner .profile-pic{
+
+.banner-content {
+    max-width: 500px;
+}
+
+.banner .profile-pic {
     width: 500px;
+}
+
+.banner-greeting {
+    font-size: 45px;
+    color: #474747;
+    margin-bottom: 0px;
+
+}
+
+.banner-title {
+    font-size: 85px;
+    font-weight: 700;
+    margin-top: 5px;
+    margin-bottom: 20px;
+}
+
+.banner-discription {
+    margin-top: 20px;
+}
+
+/* main section styles */
+/* about section styles */
+.about {
+    padding: 130px;
+    border-radius: 10px;
+    background: #FFF8F3;
+    margin: 130px 0px;
+
 }
