--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -106,6 +106,10 @@ nav a {
 }
 
 /* main section styles */
+main{
+    max-width: 1140px;
+    margin: 0px auto;
+}
 /* about section styles */
 .about {
     padding: 130px;
@@ -113,4 +117,12 @@ nav a {
     background: #FFF8F3;
     margin: 130px 0px;
 
+}
+
+.about-info-container{
+    display: flex;
+    justify-content: space-around;
+}
+.about-info{
+    text-align: center;
 }
