--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -27,7 +27,7 @@ body {
 }
 
 .section-discription {
-    color:#757575;
+    color: #757575;
     text-align: center;
     font-family: Open Sans;
     font-size: 18px;
@@ -106,10 +106,15 @@ nav a {
 }
 
 /* main section styles */
-main{
+main {
     max-width: 1140px;
     margin: 0px auto;
 }
+
+main section {
+    margin-top: 130px;
+}
+
 /* about section styles */
 .about {
     padding: 130px;
@@ -119,13 +124,40 @@ main{
 
 }
 
-.about-info-container{
+.about-info-container {
     display: flex;
     justify-content: space-around;
 }
-.about-info{
+
+.about-info {
     text-align: center;
 }
-#what-i-do-discription{
+
+/* skills related styles */
+
+#what-i-do-discription {
     padding: 30px 150px;
+}
+
+.skills-container {
+    display: flex;
+    gap: 24px;
+}
+
+.skill {
+    padding: 30px;
+    border-radius: 5px;
+    background: #FFF;
+    box-shadow: 0px 6px 50px 0px rgba(0, 0, 0, 0.06);
+}
+
+.skill-discription {
+    color: #757575;
+}
+
+/* resume-section-style */
+.resume-column-title {
+    color:#474747;
+    font-size: 30px;
+    font-weight: 700;
 }
